actualizacion de modal

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div class="container d-flex justify-content-around pt-5 pb-5">
             <div class="row">
 
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-lg-4">
                     <div class="card border-0">
                         <img src="assets/viajeros2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -173,7 +173,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-lg-4">
                     <div class="card border-0">
                         <img src="assets/experiencias.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -188,7 +188,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-md-4">
+                <div class="col-12 col-lg-4">
                     <div class="card border-0">
                         <img src="assets/traveler-chatting-with-hostel-staff-about-local-attractions.jpg"
                             class="card-img-top" alt="..imagen_viajeros">
