primera prueba con sass

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 
 
-        <div class="container d-flex justify-content-around pt-5 pb-5">
+        <div class="container-fluid d-flex justify-content-around px-5 py-5">
             <div class="row">
 
                 <div class="col-12 col-lg-4">
@@ -191,16 +191,19 @@
                 <div class="col-12 col-lg-4">
                     <div class="card border-0">
                         <img src="assets/traveler-chatting-with-hostel-staff-about-local-attractions.jpg"
-                            class="card-img-top" alt="..imagen_viajeros">
+                            class="card-img-top" alt="imagen_viajeros">
                         <div class="card-body">
                             <h5 class="card-title">¡Únete a nuestra comunidad!</h5>
                             <p class="card-text">Suscríbete a nuestro newsletter y recibe
                                 las mejores ofertas, consejos de viaje y mucho más.</p>
-                            <form class="buscador d-flex p-2 ms-3">
-                                <input type="email" placeholder="Tu correo electrónico">
-                                <button type="submit"
-                                    class="fondo-buscador rounded-2 p-1 ms-1 px-2 border-0">Suscribirse</button>
-                            </form>
+                                <div class="newsletter">
+                                    <form class="buscador d-flex p-2">
+                                        <input type="email" placeholder="Tu correo electrónico">
+                                        <button type="submit"
+                                            class="fondo-buscador rounded-2 p-1 ms-1 px-2 border-0">Suscribirse</button>
+                                    </form>
+                                </div>
+                           
                         </div>
                     </div>
 
@@ -210,18 +213,6 @@
             </div>
         </div>
 
-
-
-
-
-
-
-        <!---newsletter
-        <div class="newsletter">
-            <p>SUSCRIBITE A NUESTRO NEWSLETTER</p>
-            <input type="email" id="email" placeholder="Ingrese su correo aquí">
-            <button type="submit">Suscribirse</button>
-        </div>-->
 
 
         <footer>
