--- a/html/destinos.html
+++ b/html/destinos.html
@@ -234,20 +234,32 @@
     </aside>
 
     <footer>
-        <div class="div">|
-            acá va el newsletter
-        </div>
-        <div class="div">|
-            acá van enlaces
-        </div>
-        <div class="div">|
-            facebook
-            instagram
-            tiktok
-            whatsapp
-            youtube
-            email
-        </div>
+
+        <div class="container-fluid mt-5">
+            <div class="row mt-1">
+                <div class="col-md-3 d-flex justify-content-center">
+                    <a href="#" class="navbar-brand">
+
+                        <img class="logo img-fluid pb-3" src="../assets/logo-01.png" alt="logo-wunderlust"></a>
+
+                </div>
+                <div class="col-md-6 text-center">
+                    <h5>Mapa del sitio</h5>
+                    <ul class="list-unstyled text-white">
+                        
+                        <li><a href="#">Términos y Condiciones</a></li>
+                        <li><a href="#">Términos y Condiciones</a></li>
+                        <li><a href="#">Términos y Condiciones</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h5>Síguenos en Redes Sociales</h5>
+
+                </div>
+            </div>
+            <div class="row mt-1">
+                <p class="d-block text-center mt-1 fs-5">wuderlust@2024</p>
+            </div>
     </footer>
     </div>
     <!--bundle de bootstrap-->
