--- a/html/informacion.html
+++ b/html/informacion.html
@@ -22,7 +22,7 @@
     <!------favicon
     <link rel="shortcut icon" href="" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">------->
-    <title>nosotros</title>
+    <title>informacion</title>
 </head>
 
 <body>
@@ -41,7 +41,7 @@
                         <li class="nav-item"><a class="nav-link text-white" href="destinos.html">destinos</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="actividades.html">actividades</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link text-white" href="nosotros.html">nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="nosotros.html">informacion</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="contacto.html">contacto</a></li>
                     </ul>
                 </div>
@@ -99,20 +99,32 @@
     </main>
 
     <footer>
-        <div class="newsletter">|
-           newsletter
-        </div>
-        <div class="otros">|
-            acá van enlaces 
-        </div>
-        <div class="rrss">|
-            facebook
-            instagram
-            tiktok
-            whatsapp
-            youtube
-            email
-        </div>
+
+        <div class="container-fluid mt-5">
+            <div class="row mt-1">
+                <div class="col-md-3 d-flex justify-content-center">
+                    <a href="#" class="navbar-brand">
+
+                        <img class="logo img-fluid pb-3" src="../assets/logo-01.png" alt="logo-wunderlust"></a>
+
+                </div>
+                <div class="col-md-6 text-center">
+                    <h5>Mapa del sitio</h5>
+                    <ul class="list-unstyled text-white">
+                        
+                        <li><a href="#">Términos y Condiciones</a></li>
+                        <li><a href="#">Términos y Condiciones</a></li>
+                        <li><a href="#">Términos y Condiciones</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h5>Síguenos en Redes Sociales</h5>
+
+                </div>
+            </div>
+            <div class="row mt-1">
+                <p class="d-block text-center mt-1 fs-5">wuderlust@2024</p>
+            </div>
     </footer>
     <!--bundle de bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
