--- a/html/contacto.html
+++ b/html/contacto.html
@@ -41,7 +41,7 @@
                         <li class="nav-item"><a class="nav-link text-white" href="destinos.html">destinos</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="actividades.html">actividades</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link text-white" href="nosotros.html">nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="informacion.html">informacion</a></li>
                         <li class="nav-item"><a class="nav-link text-white" href="contacto.html">contacto</a></li>
                     </ul>
                 </div>
