--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </li>
                         <li class="nav-item"><a class="nav-link text-white" href="html/actividades.html">actividades</a>
                         </li>
-                        <li class="nav-item"><a class="nav-link text-white" href="html/nosotros.html">información</a>
+                        <li class="nav-item"><a class="nav-link text-white" href="html/informacion.html">información</a>
                         </li>
                         <li class="nav-item"><a class="nav-link text-white" href="html/contacto.html">contacto</a>
                         </li>
