iconos redes y comienzo  pagina actividades

--- a/index.html
+++ b/index.html
@@ -245,14 +245,19 @@
                         <li><a href="#">Términos y Condiciones</a></li>
                     </ul>
                 </div>
-                <div class="col-md-3">
-                    <h5>Síguenos en Redes Sociales</h5>
+                <div class="col-md-3 d-flex justify-content-center">                  
+                        <a href="https://www.facebook.com" target="_parent"><img src="../assets/redes/facebook.png"  class="btn btn-social-icons img-fluid" alt="Facebook"></a>
+                        <a href="https://www.instagram.com" target="_parent"><img src="../assets/redes/instagram.png"  class="btn btn-social-icons img-fluid" alt="Facebook"></a>
+                        <a href="https://www.tiktok.com" target="_parent"><img src="../assets/redes/tiktok .png"  class="btn btn-social-icons img-fluid" alt="Facebook"></a>
+                        <a href="https://www.Youtube.com" target="_parent"><img src="../assets/redes/Youtube.png"  class="btn btn-social-icons img-fluid" alt="Facebook"></a>
 
                 </div>
             </div>
             <div class="row mt-1">
                 <p class="d-block text-center mt-1 fs-5">wuderlust@2024</p>
             </div>
+
+            
     </footer>
 
 
