correción enlaces y avances en page actividades

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <!---->
                 <form class="d-flex mt-1" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success fondo-buscador" type="submit">Search</button>
+                    <button class="btn btn-outline-success fondo-buscador" type="submit">Buscar</button>
                 </form>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -204,7 +204,7 @@
     </div>
 
     <section class="nosotros">
-        <h4>Nosotros</h4>
+        <h4 class=" text-center">Nosotros</h4>
         <p>
             orem ipsum dolor sit amet consectetur adipisicing elit. Laborum atque quo, dolorem, velit molestias itaque,
             cumque repudiandae architecto sunt ullam ea. Beatae aperiam eaque a dolor quis fugiat ipsum placeat
@@ -213,11 +213,11 @@
 
     </section>
 
-    <section>
-        <h5 class="card-title">¡Únete a nuestra comunidad!</h5>
-        <p class="card-text">Suscríbete a nuestro newsletter y recibe
+    <section class="comunidad align-items-center">
+        <h5 class="card-title text-center">¡Únete a nuestra comunidad!</h5>
+        <p class="card-text text-center">Suscríbete a nuestro newsletter y recibe
             las mejores ofertas, consejos de viaje y mucho más.</p>
-        <div class="newsletter">
+        <div class="newsletter d-flex justify-content-center">
             <form class="buscador d-flex p-2">
                 <input type="email" placeholder="Tu correo electrónico">
                 <button type="submit" class="fondo-buscador rounded-2 p-1 ms-1 px-2 border-0">Suscribirse</button>
@@ -246,10 +246,10 @@
                     </ul>
                 </div>
                 <div class="col-md-3 d-flex justify-content-center">                  
-                        <a href="https://www.facebook.com" target="_parent"><img src="../assets/redes/facebook.png"  class="btn btn-social-icons img-fluid" alt="Facebook"></a>
-                        <a href="https://www.instagram.com" target="_parent"><img src="../assets/redes/instagram.png"  class="btn btn-social-icons img-fluid" alt="Facebook"></a>
-                        <a href="https://www.tiktok.com" target="_parent"><img src="../assets/redes/tiktok .png"  class="btn btn-social-icons img-fluid" alt="Facebook"></a>
-                        <a href="https://www.Youtube.com" target="_parent"><img src="../assets/redes/Youtube.png"  class="btn btn-social-icons img-fluid" alt="Facebook"></a>
+                        <a href="https://www.facebook.com" target="_parent"><img src="assets/redes/facebook.png"  class="btn btn-social-icons img-fluid" alt="Facebook"></a>
+                        <a href="https://www.instagram.com" target="_parent"><img src="assets/redes/instagram.png"  class="btn btn-social-icons img-fluid" alt="Facebook"></a>
+                        <a href="https://www.tiktok.com" target="_parent"><img src="assets/redes/tiktok .png"  class="btn btn-social-icons img-fluid" alt="Facebook"></a>
+                        <a href="https://www.Youtube.com" target="_parent"><img src="assets/redes/Youtube.png"  class="btn btn-social-icons img-fluid" alt="Facebook"></a>
 
                 </div>
             </div>
