--- a/html/contacto.html
+++ b/html/contacto.html
@@ -67,7 +67,7 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-12 mt-2">
+                    <div class="col-12 mt-2 pt-5">
                         <p class="fs-2 fw-bold fs-1 text-center">Conéctate con nosotros</p>
                         <p class="fs-3 text-secondary fw-semibold text-decoration-underline text-center">Contactanos por
                             los siguientes medios o dejanos tus datos y te responderemos a la brevedad</p>
@@ -81,7 +81,7 @@
                             </div>
 
                             <h5 class="card-title text-center">TELÉFONO</h5>
-                            <p class="card-text text-center fs-5 lh-1 text-secondary mb-4">011 50545435</p>
+                            <p class="card-text text-center fs-5 lh-1 text-secondary mb-2">011 50545435</p>
                             <p class="card-text text-center fs-5 lh-1 text-secondary mb-4">0911 4589-8775</p>
 
                         </div>
@@ -93,7 +93,7 @@
                                 <img src="../assets/redes/contacto-03.png" class="img-fluid" alt="icono_email">
                             </div>
                             <h5 class="card-title text-center">EMAIL</h5>
-                            <p class="card-text text-center fs-5 lh-1 text-secondary mb-4">info@wunderlust.com</p>
+                            <p class="card-text text-center fs-5 lh-1 text-secondary mb-2">info@wunderlust.com</p>
                             <p class="card-text text-center fs-5 lh-1 text-secondary mb-4">contacto@wunderlust.com</p>
 
 
@@ -109,9 +109,9 @@
                             </div>
 
                             <h5 class="card-title text-center">UBICACIÓN</h5>
-                            <p class="card-text text-center fs-5 lh-1 text-secondary">Av. 9 de Julio s/n Plaza de la
+                            <p class="card-text text-center fs-5 text-secondary mb-0">Av. 9 de Julio s/n Plaza de la
                                 República</p>
-                            <p class="card-text text-center fs-5  text-secondary mb-4">Ciudad Autónoma de Buenos
+                            <p class="card-text text-center fs-5  text-secondary mt-0 mb-2">Ciudad Autónoma de Buenos
                                 Aires, Argentina</p>
                         </div>
                     </div>
@@ -185,22 +185,43 @@
 
                 </div>
                 <div class="col-md-6 text-center">
-                    <h5>Mapa del sitio</h5>
+                    <h5 class="text-center">Mapa del sitio</h5>
                     <ul class="list-unstyled text-white">
 
-                        <li><a href="#">Términos y Condiciones</a></li>
-                        <li><a href="#">Términos y Condiciones</a></li>
+                        <li><a href="#">Destinos</a></li>
+                        <li><a href="#">Actividades</a></li>
+                        <li><a href="#">Informacion</a></li>
+                        <li><a href="#">Contacto</a></li>
                         <li><a href="#">Términos y Condiciones</a></li>
                     </ul>
                 </div>
-                <div class="col-md-3">
-                    <h5>Síguenos en Redes Sociales</h5>
+                <div class="col-md-3 d-flex justify-content-center">
+                    <ul class="redes mt-1">
+
+                        <li> <a href="https://www.facebook.com" target="_parent"><img src="../assets/redes/facebook.png"
+                                    class="btn btn-social-icons img-fluid" alt="Facebook"></a></li>
+                        <li> <a href="https://www.instagram.com" target="_parent"><img
+                                    src="../assets/redes/instagram.png" class="btn btn-social-icons img-fluid"
+                                    alt="Facebook"></a></li>
+                        <li> <a href="https://www.tiktok.com" target="_parent"><img src="../assets/redes/tiktok .png"
+                                    class="btn btn-social-icons img-fluid" alt="Facebook"></a></li>
+                        <li>
+                            <a href="https://www.Youtube.com" target="_parent"><img src="../assets/redes/Youtube.png"
+                                    class="btn btn-social-icons img-fluid" alt="Facebook"></a>
+                        </li>
+
+                    </ul>
+
+
+
 
                 </div>
             </div>
             <div class="row mt-1">
                 <p class="d-block text-center mt-1 fs-5">wuderlust@2024</p>
             </div>
+
+
     </footer>
     <!--bundle de bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
