--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container-fluid d-flex justify-content-center px-5 mx-5">
                 <a href="#" class="navbar-brand">
                     <!--------itemprop e itemtype para SEO------->
-                    <img class="logo img-fluid pb-3" src="assets/logo-01.png" alt="logo-wunderlust" itemprop="logo"
+                    <img class="logo img-fluid pb-3 ps-5" src="assets/logo-01.png" alt="logo-wunderlust" itemprop="logo"
                         itemscope itemtype="http://schema.org/Organization"></a>
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 fs-5 mx-auto">
@@ -70,8 +70,8 @@
     <main>
         <section class="container-fluid  px-0 mx-0">
             <div class="row">
-                <div class="col-12 flex-column align-items-center">
-                    <div class="container-flex">
+                <div class="col-12 col-md-6 flex-column align-items-center">
+                    <div class="container">
                         <h1 class="bienvenido">
                             Bienvenido
                         </h1>
@@ -119,7 +119,7 @@
 
                 </div>
             </div>
-            <div class="background_video embed-responsive embed-responsive-4by3">
+            <div class="background_video embed-responsive embed-responsive-16by9">
                 <video autoplay loop muted >
                     <source src="assets/banner_1920x1080.mp4" type="video/mp4">
                 </video>
