cambios en el index pruebas en el responsive 320 y 768

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -31,7 +31,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-expand-lg ">
             <div class="container-fluid d-flex justify-content-center px-5 mx-5">
                 <a href="#" class="navbar-brand">
                     <!--itemprop e itemtype para SEO-->
