--- a/html/actividades.html
+++ b/html/actividades.html
@@ -34,7 +34,7 @@
 
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg fixed-top nabvar-scrolled">
+            <nav class="navbar navbar-expand-lg nabvar-scrolled">
                 <div
                     class="container-fluid d-flex justify-content-center px-5 mx-5">
                     <a href="#" class="navbar-brand">
