optimización de video, cambio de código home, optimización imágenes actividades, avances responsive

--- a/html/actividades.html
+++ b/html/actividades.html
@@ -44,21 +44,10 @@
                             itemscope itemtype="http://schema.org/Organization">
                     </a>
 
-                    
-                        <!--lupa-->
-                <div class=" container justify-content-center d-flex align-items-center">
-                    <form class="lupa">
-                        <div class="btn btn-outline-secondary border-0"
-                            type="button">
-                            <i class="fas fa-search text-white"></i>
-                        </div>
-                        <input type="search" class="form-control"
-                            placeholder="Buscar" aria-label="Search">
-                    </form>
-                </div> 
+                
 
                 <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 fs-5 mx-auto">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 fs-5 mx-auto  text-center">
                         <li class="nav-item"><a
                                 class="nav-link nav-link-active text-white"
                                 href="../index.html">inicio</a>
@@ -109,20 +98,21 @@
                         </div>
 
                         <div class="row">
-                            <h2>Vía maritima</h2>
-                            <div class="col-md-4">
+                            <h2>NAVEGACIONES</h2>
+                            <div class="col-12 
+                           col-md-4">
 
                                 <div class="card border-0">
                                     <h2 class="fs-3">BARILOCHE</h2>
                                     <h3
-                                        class="text-center text-dark fw-light fs-5">Puerto
+                                        class="text-center fw-light fs-5">Puerto
                                         Blest Puerto Pañuelo</h3>
                                     <img
-                                        src="../assets/actividades/puerto_blest.jpg"
+                                        src="../assets/actividades/puerto_blest.png"
                                         class="card-img-top"
                                         alt="imagen_glaciares">
                                     <div class="card-body">
-                                        <p class="card-text">Puerto Blest y
+                                        <p class="card-text">Full day Puerto Blest y
                                             Cataratas Cantaros con Tour Lago
                                             Frías</p>
                                         <h3
@@ -168,14 +158,14 @@
 
 
 
-                            <div class="col-md-4">
+                            <div class="col-12 col-md-4">
                                 <div class="card border-0">
                                     <h2 class="fs-3">CALAFATE</h2>
                                     <h3
                                         class="text-center text-dark fw-light fs-5">Todo
                                         glaciares gourmet</h3>
                                     <img
-                                        src="../assets/actividades/todo_glaciares.jpg"
+                                        src="../assets/actividades/todo_glaciares.png"
                                         class="card-img-top"
                                         alt="imagen_glaciares">
                                     <div class="card-body">
@@ -232,7 +222,7 @@
                                 <h3
                                     class="text-center text-dark fw-light fs-5">Full day
                                     cataratas Iguazú </h3>
-                                <img src="../assets/actividades/cataratas2.jpg"
+                                <img src="../assets/actividades/cataratas.png"
                                     class="card-img-top"
                                     alt="imagen_glaciares">
                                 <div class="card-body">
@@ -293,7 +283,7 @@
                                     class="text-center text-dark fw-light fs-5">Quebrada
                                     de Humauaca completa</h3>
                                 <img
-                                    src="../assets/actividades/todo_glaciares.jpg"
+                                    src="../assets/actividades/quebrada_humahuaca.png"
                                     class="card-img-top"
                                     alt="imagen_glaciares">
                                 <div class="card-body">
@@ -329,7 +319,7 @@
                                     class="text-center text-dark fw-light fs-5">Salinas
                                     grandes y Purmamarca desde Salta</h3>
                                 <img
-                                    src="../assets/actividades/todo_glaciares.jpg"
+                                    src="../assets/actividades/salinas_grandes.png"
                                     class="card-img-top"
                                     alt="imagen_glaciares">
                                 <div class="card-body">
@@ -365,7 +355,7 @@
                                 <h3 class="text-center text-dark fw-light fs-5">San
                                     Martín de los Andes y 7 lagos</h3>
                                 <img
-                                    src="../assets/actividades/todo_glaciares.jpg"
+                                    src="../assets/actividades/7lagos.png"
                                     class="card-img-top"
                                     alt="imagen_glaciares">
                                 <div class="card-body">
@@ -398,7 +388,7 @@
                                 <h3 class="text-center text-dark fw-light fs-5">Circuito
                                     grande</h3>
                                 <img
-                                    src="../assets/actividades/todo_glaciares.jpg"
+                                    src="../assets/actividades/circuito_grande.png"
                                     class="card-img-top"
                                     alt="imagen_glaciares">
                                 <div class="card-body">
@@ -434,11 +424,11 @@
                         </div>
                         <div class="col-md-4">
                             <div class="card border-0">
-                                <h2 class="fs-3">CALAFATE</h2>
+                                <h2 class="fs-3">CHALTÉN</h2>
                                 <h3 class="text-center text-dark fw-light fs-5">Chalten
                                     Trekking al Mirador del Glaciar Huemul</h3>
                                 <img
-                                    src="../assets/actividades/todo_glaciares.jpg"
+                                    src="../assets/actividades/chalten.png"
                                     class="card-img-top"
                                     alt="imagen_glaciares">
                                 <div class="card-body">
@@ -474,7 +464,7 @@
                                 <h3 class="text-center text-dark fw-light fs-5">la cumbrecita
                                     y Villa general Belgrano</h3>
                                 <img
-                                    src="../assets/actividades/todo_glaciares.jpg"
+                                    src="../assets/actividades/cumbrecita.png"
                                     class="card-img-top"
                                     alt="imagen_glaciares">
                                 <div class="card-body">
@@ -561,6 +551,7 @@
 
         </article>
 
+        <!---
             <section>formas de pago</section>
             <div class="form-check">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
@@ -573,7 +564,7 @@
                 <label class="form-check-label" for="flexRadioDefault2">
                   Default checked radio
                 </label>
-              </div>
+              </div>-->
 
               <footer>
 
