--- a/html/informacion.html
+++ b/html/informacion.html
@@ -46,22 +46,10 @@
                             itemscope itemtype="http://schema.org/Organization">
                     </a>
 
-                    <!--lupa-->
-                    <div
-                        class=" container justify-content-center d-flex align-items-center">
-                        <form class="lupa">
-                            <div class="btn btn-outline-secondary border-0"
-                                type="button">
-                                <i class="fas fa-search text-white"></i>
-                            </div>
-                            <input type="search" class="form-control"
-                                placeholder="Buscar" aria-label="Search">
-                        </form>
-                    </div>
 
                     <div class="collapse navbar-collapse" id="navbarText">
                         <ul
-                            class="navbar-nav me-auto mb-2 mb-lg-0 fs-5 mx-auto">
+                            class="navbar-nav me-auto mb-2 mb-lg-0 fs-5 mx-auto  text-center">
                             <li class="nav-item"><a
                                     class="nav-link nav-link-active text-white"
                                     href="../index.html">inicio</a>
