ajustes responsive index

--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 
     <!---->
     <main>
-        <section class="container-fluid  px-0 mx-0">
+        <section class="container">
             <div class="row">
-                <div class="col-12 col-md-6 flex-column align-items-center">                 
-                        <div class="container texto-bienvenida">
+                <div class="col-12 col-md-8 flex-column align-items-center">                 
+                        <div class="container-fluid texto-bienvenida">
                             <h1 class="bienvenido">
                                 Bienvenido
                             </h1>
-                            <h3 class="descubri">
+                            <h3 class="descubri fw-bold">
                                 Descubrí Argentina
                             </h3>
                             <!--agregar modal bootstrap-->
