--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <h3 class="fs-3 text-center ">Viví aventuras
                     inolvidables.</h3>
                     <div class="container text-white justify-content-center px-3 py-3">
-                        <p>Explora glaciares milenarios, escala volcanes, navega
+                        <p class="fs-5">Explora glaciares milenarios, escala volcanes, navega
                             por ríos caudalosos y descubre la rica
                             biodiversidad de nuestros bosques. Con guías
                             expertos y equipos de última generación, cada
