responsive index 768 y 320 (falta header y footer)

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </section>
     </main>
 
-    <section class="container mt-3">
+    <section class="container">
         <div class="row">
             <div class="col-12">
                 <h2 class="disfruta">Argentina te espera</h2>
@@ -185,7 +185,7 @@
                                     rincones más fascinantes de nuestro país.
                                 </p>
                                 <a href="#" class="btn btn-success border-0">Explora
-                                    destinos</a>
+                                    </a>
                             </div>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                                     tenemos la actividad
                                     perfecta para ti.</p>
                                 <a href="#" class="btn btn-success border-0">Descubrí
-                                    actividad</a>
+                                  </a>
                             </div>
                         </div>
                     </div>
@@ -218,7 +218,7 @@
                                     los rincones más asombrosos de Argentina.
                                     ¡Reserva tu experiencia ahora!</p>
                                 <a href="#" class="btn btn-success  border-0">
-                                    Reservá ahora
+                                    Reservá
                                 </a>
 
                             </div>
