prueba slider sección actividades + responsive 768

--- a/html/informacion.html
+++ b/html/informacion.html
@@ -93,9 +93,9 @@
                         </div>
 
                         <div class="col-12 col-lg-6">
-                            <h1 class="fs-1">Nosotros</h1>
+                            <h1 class="bienvenido">Nosotros</h1>
 
-                            <p class="nosotros">Somos expertos en turismo
+                            <p class="fs-5">Somos expertos en turismo
                                 argentino y te ofrecemos una amplia variedad de
                                 opciones para que explores nuestro hermoso país.
                                 Desde las montañas de la Patagonia hasta las
