diseño final para entrega, faltan detalles de responsive y funcionalidad cards, seo y revisar código final

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -83,9 +83,9 @@
         <section>
             <div class="container mt-5 pt-5">
                 <div class="row">
-                    <p class="fs-2 fw-bold fs-1 text-center mt-5 pt-5">Contactanos!</p>  
+                    <h1 class="text-center">Contactanos!</h1>  
                     <div class="row">
-                        <div class="col-12 col-lg-4">
+                        <div class="col-8 mx-auto col-lg-4">
                             <div class="card">
                                 <div class="card-body text-center mt-3">
                                     <img src="../assets/redes/contacto-01.png" class="img-fluid" alt="icono_telefono">
@@ -98,7 +98,7 @@
                             </div>
                         </div>
     
-                        <div class="col-12 col-lg-4">
+                        <div class="col-8 mx-auto col-lg-4">
                             <div class="card">
                                 <div class="card-body text-center mt-3">
                                     <img src="../assets/redes/contacto-03.png" class="img-fluid" alt="icono_email">
@@ -113,7 +113,7 @@
                             </div>
                         </div>
     
-                        <div class="col-12 col-lg-4">
+                        <div class="col-8 mx-auto col-lg-4">
                             <div class="card">
                                 <div class="card-body text-center mt-3">
                                     <img src="../assets/redes/contacto-02.png" class="img-fluid" alt="icono_localización">
@@ -134,10 +134,10 @@
         </section>
 
         <section class="contactanos">                    
-                <div class="container form-contacto">
-                    <p class="fs-3 text-secondary fw-semibold">
-                        Dejanos tus datos y nos comunicaremos a la brevedad</p> 
-                     <div class="col-12">
+                <div class="container form-contacto">                   
+                     <div class="col-12 justify-content-center">
+                        <p class="fs-3 text-secondary fw-bold">
+                            Dejanos tus datos y nos comunicaremos a la brevedad</p> 
                     <div class="contact-form-area">
                         <div class="contact-form">
                             <form action="#">
