--- a/html/destinos.html
+++ b/html/destinos.html
@@ -308,8 +308,8 @@
         </main>      
 
         <aside>
-            <h3>Reservá ahora y aprovechá de descuentos en
-                alojamientos seleccionados</h3>
+            <h3>Alojamientos elegídos por nuestros viajeros
+            </h3>
             <div class="container">
                 <!-- imagenes de destinos-->
                 <div id="carouselExampleCaptions" class="carousel slide">
@@ -328,7 +328,7 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img
-                                src="/assets/alojamientos/hotel_quijote/quijote09.jpg"
+                                src="../assets/alojamientos/hotel_quijote/quijote09.jpg"
                                 class="d-block w-100" alt="imagen_hotel">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>First slide label</h5>
@@ -338,7 +338,7 @@
                         </div>
                         <div class="carousel-item">
                             <img
-                                src="/assets/alojamientos/hotel_quijote/quijote06.jpg"
+                                src="../assets/alojamientos/hotel_quijote/quijote06.jpg"
                                 class="d-block w-100" alt="imagen_hotel">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Second slide label</h5>
@@ -348,7 +348,7 @@
                         </div>
                         <div class="carousel-item">
                             <img
-                                src="/assets/alojamientos/hotel_quijote/quijote07.jpg"
+                                src="../assets/alojamientos/hotel_quijote/quijote07.jpg"
                                 class="d-block w-100" alt="imagen_hotel">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Third slide label</h5>
